# get_form_with_fastapi

./: Dockerfile  README.md  pyproject.toml
app/: db.json  main.py  test_requests.py  test_your_request.py
