[tool.poetry]
name = "get-form-with-fastapi"
version = "0.1.0"
description = ""
authors = ["alex <me@fomin3.ru>"]
readme = "README.md"
packages = [{include = "get_form_with_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
tinydb = "^4.7.0"
loguru = "^0.6.0"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
